Finalised edits for new workflow logic. Changed pst reference to PST130.

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,18 +1,20 @@
 process {
     executor = 'slurm'
     clusterOptions = '--qos=normal -p jic-short,nbi-short'
+    withName: DesignPrimers {
+    clusterOptions = '--qos=normal -p jic-long,nbi-long'
+    }
 }
 
 profiles {
     standard {
         process.executor = 'local'
     }
-
+    
     slurm {
         process.executor = 'slurm'
         process.clusterOptions = '--qos=normal -p jic-short,nbi-short'
-    }
-
+    }    
 }
 
 params {
